--- a/views/top-restaurants.hbs
+++ b/views/top-restaurants.hbs
@@ -23,7 +23,7 @@
             <p class='card-text my-4' style='white-space: break-spaces;'>{{this.description}}</p>
             <a href='/restaurants/{{this.id}}' class='btn btn-primary'>Show</a>
 
-            {{#if this.isFavorited}}
+            {{#if this.isfavorited}}
               <form action='/favorite/{{this.id}}?_method=DELETE' method='POST' style='display: contents;'>
                 <button type='submit' class='btn btn-danger m-1'>移除最愛</button>
               </form>
